# inveniordm-py

./: .editorconfig  .git-blame-ignore-revs  AUTHORS.rst  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml
docs/: api.rst  conf.py  configuration.rst  index.rst  usage.rst
inveniordm_py/: __init__.py  client.py  metadata.py  pagination.py  resources.py
inveniordm_py/files/: __init__.py  metadata.py
inveniordm_py/records/: __init__.py  metadata.py  resources.py
tests/: __init__.py  conftest.py  test_drafts.py  test_files.py  test_invenio_client.py
tests/mock/: __init__.py  handlers.py  request.py  response.py  session.py
